--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react": "^16.4.0",
     "react-dev-utils": "^4.2.1",
     "react-dom": "^16.4.0",
+    "react-router-dom": "^4.3.1",
     "styled-components": "^3.3.2",
     "styled-normalize": "^4.0.0",
     "unistore": "^3.0.6"
